2007-03-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* CardGroup.m ([CardGroup +groupWithTag:aTag]): simply invoke
	[self elementWithTag:].
	([CardGroup +groupWithTag:aTagchildren:someChildren]): same as
	above.

2007-03-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalEntityObject.h (enum): added an enum with iCalAccessPublic,
	iCalAccessPrivate and iCalAccessConfidential values.

2007-02-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* CardGroup.m ([CardGroup -firstChildWithTag:aTag]): new method.

2007-02-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* CardGroup.m ([CardGroup +cardParser]): find the correct parser
	by requesting a parser by name instead of by mime-type. This way,
	any parser which would declare the same types would not
	enter in conflict.

2007-02-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* CardElement.m ([CardElement -namedValue:aValueName]): use
	NSString's rangeOfString instead of indexOfString for
	compatibility with GNUstep.

2007-02-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* NGVCard.m ([NGVCard -classForTag:classTag]): declare an entry
	for "FBURL".

2006-08-03  Helge Hess  <helge.hess@opengroupware.org>

	* NGVCardSaxHandler.m: fixed a bug with returning parsing results.
	  Properly make a copy of the vCard array so that -clear doesn't
	  destroy references. Thanks go to Wolfgang Sourdeau for documenting
	  the issue! (v4.5.76)

2006-07-04  Helge Hess  <helge.hess@opengroupware.org>

	* use %p for pointer formats, fixed gcc 4.1 warnings (v4.5.75)

2006-05-16  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iCalDataSource.h, common.h: changed EOControl related includes into
	  imports to enable compilation against MulleEOF (v4.5.74)

2006-04-07  Marcus Mueller  <znek@mulle-kybernetik.com>

	* iCalEntityObject.h: added missing forward declaration for
	  gstep-base compile (v4.5.73)

2006-04-06  Marcus Mueller  <znek@mulle-kybernetik.com>

	* v4.5.72

	* iCalEntityObject.[hm]: added "url" property - unfortunately